--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 <h1 id="question">Will you accept a Full-Mouth Rehab of my heart? 💎🦷</h1>
 
 <audio id="bg-music" loop playsinline>
-  <source src="https://docs.google.com/uc?export=open&id=1M0LUmihaz1HVBXvIzzO8hI5mQBIl-HYE" type="audio/mpeg">
+  <source src="music.mp3" type="audio/mpeg">
 </audio>
 
 <div class="container">
